--- a/movie/templates/movie/movie_detail.html
+++ b/movie/templates/movie/movie_detail.html
@@ -1,72 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Space Between Us</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-
-	<!-- Link Swiper's CSS -->
-	<link rel="stylesheet" href="css/swiper.min.css">
-	<link rel="stylesheet" href="css/styles.css">
-
-	<script src="js/jquery-3.1.1.min.js"></script>
-	<script src="js/script.js"></script>
-
-
-	<!-- Demo styles -->
-	<style>
-
-
-
-	</style>
-</head>
-<body>
-	<div class="wrapper">
-
-		<header class="header">
-			<figure class="logo"><a href="index.html"><img src="img/logo.png" alt="Logo"></figure></a>
-			<nav class="menu">
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a>Genres</a>
-						<ul>
-							<li><a href="genre.html">Action</a></li>
-							<li><a href="genre.html">Comedy</a></li>
-							<li><a href="genre.html">Drama</a></li>
-							<li><a href="genre.html">Romance</a></li>
-						</ul>
-					</li>
-					<li><a>Year</a>
-						<ul>
-							<li><a href="year.html">2017</a></li>
-							<li><a href="year.html">2016</a></li>
-							<li><a href="year.html">2015</a></li>
-							<li><a href="year.html">2014</a></li>
-						</ul>
-					</li>
-					<li><a>Language</a>
-						<ul>
-							<li><a href="language.html">English</a></li>
-							<li><a href="language.html">German</a></li>
-						</ul>
-					</li>
-					<li><a href="mostwatched.html">Most Watched</a></li>
-					<li class="mobsearch">
-						<form class="mobform">
-							<input type="text" name="s" class="mobsearchfield" placeholder="Search...">
-							<input type="submit" value="" class="mobsearchsubmit">
-						</form>
-					</li>
-				</ul>
-			</nav>
-			<form class="search">
-				<input type="text" name="s" class="searchfield" placeholder="Search...">
-				<input type="submit" value="" class="searchsubmit">
-			</form>
-
-			<div class="toggle"><img src="img/menu.svg"></div>
-		</header>
-
+{% extends 'base.html' %}
+{% block body %}
 		<main class="content">
 			<div class="single">
 
@@ -78,13 +11,13 @@
 				</section>
 
 				<section class="movie">
-					<img src="images/9.jpg">
+					<img src="{{ object.image.url }}">
 					<ul>
-						<li>Space Between Us</li>
-						<li>The first human born on Mars travels to Earth for the first time, experiencing the wonders of the planet through fresh eyes. He embarks on an adventure with a street smart girl to discover how he came to be.</li>
+						<li>{{ object }}</li>
+						<li>{{ object.description }}</li>
 						<li><a href="genre.html">Adventure</a>, <a href="genre.html">Drama</a>, <a href="genre.html">Romance</a></li>
 						<li><a href="cast.html">Gary Oldman</a>, <a href="cast.html">Asa Butterfield</a></li>
-						<li>12,000 Views</li>
+						<li>{{ object.view_count }} Views</li>
 					</ul>
 				</section>
 				<section class="links">
@@ -131,35 +64,7 @@
 					</div>
 
 				</section>
-
-				<section class="comments">
-					<h3>Comments</h3>
-				</section>
 			</div>
 		</main>
 
-		<footer class="footer">
-			<div class="copyright"><p>Copyright &copy 2017 www.focusoncode.com</p></div>
-			<div class="footermenu">
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="contact.html">Contact</a></li>
-					<li><a href="terms.html">Terms and conditions</a></li>
-				</ul>
-			</div>
-			<div class="tags">
-				<ul>
-					<li>Watch Free Movies Trailers</li>
-					<li>Movie Trailers</li>
-					<li>English Subtitled Movies Trailers</li>
-					<li>Latest Movies Trailers</li>
-					<li>New Movies Trailers</li>
-
-				</ul>
-			</div>
-
-		</footer>
-
-	</div>
-</body>
-</html>
+{% endblock %}
