add movie links and model

--- a/movie/templates/movie/movie_detail.html
+++ b/movie/templates/movie/movie_detail.html
@@ -16,7 +16,7 @@
 						<li>{{ object }}</li>
 						<li>{{ object.description }}</li>
 						<li><a href="genre.html">Adventure</a>, <a href="genre.html">Drama</a>, <a href="genre.html">Romance</a></li>
-						<li><a href="cast.html">Gary Oldman</a>, <a href="cast.html">Asa Butterfield</a></li>
+						<li><a href="">{{ object.cast }}</a></li>
 						<li>{{ object.view_count }} Views</li>
 					</ul>
 				</section>
