--- a/movie/templates/movie/movie_detail.html
+++ b/movie/templates/movie/movie_detail.html
@@ -24,15 +24,19 @@
 					<h3>Links</h3>
 					<ul class="dlinks">
 						<li><a>Download</a></li>
-						<li><a href="#">Link1</a></li>
-						<li><a href="#">Link2</a></li>
-						<li><a href="#">Link3</a></li>
+                        {% for link in links %}
+                            {% if link.type == 'D' %}
+                                <li><a href="{{link.link}}">Link {{ forloop.counter }}</a></li>
+                            {% endif %}
+                        {% endfor %}
 					</ul>
 					<ul class="wlinks">
 						<li><a>Watch</a></li>
-						<li><a href="#">Link1</a></li>
-						<li><a href="#">Link2</a></li>
-						<li><a href="#">Link3</a></li>
+						{% for link in links %}
+                            {% if link.type == 'W' %}
+                                <li><a href="{{link.link}}">Link {{ forloop.counter }}</a></li>
+                            {% endif %}
+                        {% endfor %}
 					</ul>
 				</section>
 
