--- a/movie/templates/movie/movie_list.html
+++ b/movie/templates/movie/movie_list.html
@@ -3,6 +3,14 @@
 {% block body %}
 		<main class="content">
 			<section class="centered">
+                {% if movie_category %}
+                    <h3>{{ movie_category|title }} Movies</h3>
+                {% endif %}
+
+                {% if movie_language %}
+                    <h3>{{ movie_language|title }} Movies</h3>
+                {% endif %}
+
 				<div class="movies">
 					{% for movie in object_list %}
 						<div class="mov">
@@ -11,6 +19,8 @@
 								<h2 class="movietitle">{{movie.title}}</h2>
 							</a>
 						</div>
+                    {% empty %}
+                        <h3>There are no movie in this category.</h3>
 					{% endfor %}
 
 				</div>
