--- a/templates/base.html
+++ b/templates/base.html
@@ -31,10 +31,10 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a>Genres</a>
 						<ul>
-							<li><a href="genre.html">Action</a></li>
-							<li><a href="genre.html">Comedy</a></li>
-							<li><a href="genre.html">Drama</a></li>
-							<li><a href="genre.html">Romance</a></li>
+							<li><a href="{% url 'movies:movie_category' 'action' %}">Action</a></li>
+							<li><a href="{% url 'movies:movie_category' 'comedy' %}">Comedy</a></li>
+							<li><a href="{% url 'movies:movie_category' 'drama' %}">Drama</a></li>
+							<li><a href="{% url 'movies:movie_category' 'romance' %}">Romance</a></li>
 						</ul>
 					</li>
 					<li><a>Year</a>
@@ -47,11 +47,10 @@
 					</li>
 					<li><a>Language</a>
 						<ul>
-							<li><a href="language.html">English</a></li>
+							<li><a href="{% url 'movies:movie_language' 'en' %}">English</a></li>
 							<li><a href="language.html">German</a></li>
 						</ul>
 					</li>
-					<li><a href="mostwatched.html">Most Watched</a></li>
 					<li class="mobsearch">
 						<form class="mobform">
 							<input type="text" name="s" class="mobsearchfield" placeholder="Search...">
