--- a/templates/base.html
+++ b/templates/base.html
@@ -47,20 +47,20 @@
 					</li>
 					<li><a>Language</a>
 						<ul>
-							<li><a href="{% url 'movies:movie_language' 'en' %}">English</a></li>
-							<li><a href="language.html">German</a></li>
+							<li><a href="{% url 'movies:movie_language' 'english' %}">English</a></li>
+							<li><a href="{% url 'movies:movie_language' 'german' %}">German</a></li>
 						</ul>
 					</li>
 					<li class="mobsearch">
-						<form class="mobform">
-							<input type="text" name="s" class="mobsearchfield" placeholder="Search...">
+						<form class="mobform" method="GET">
+							<input type="text" name="query" value={{ request.GET.q }} class="mobsearchfield" placeholder="Search...">
 							<input type="submit" value="" class="mobsearchsubmit">
 						</form>
 					</li>
 				</ul>
 			</nav>
-			<form class="search">
-				<input type="text" name="s" class="searchfield" placeholder="Search...">
+			<form class="search" method="GET" action="{% url 'movies:movie_search' %}">
+                <input type="text" name="query" value="{{ request.GET.q }}" class="searchfield" placeholder="Search...">
 				<input type="submit" value="" class="searchsubmit">
 			</form>
 
